--- a/wizard/wizard-interface.ui
+++ b/wizard/wizard-interface.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>833</width>
-    <height>354</height>
+    <width>966</width>
+    <height>1168</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>833</width>
+     <width>966</width>
      <height>25</height>
     </rect>
    </property>
@@ -46,6 +46,206 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents_8">
     <layout class="QGridLayout" name="gridLayout_2">
+     <item row="18" column="0">
+      <widget class="QFrame" name="frame_3">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>200</height>
+        </size>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <widget class="QWidget" name="verticalLayoutWidget">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>711</width>
+          <height>194</height>
+         </rect>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+          <widget class="QPushButton" name="coverButton1">
+           <property name="text">
+            <string>I think it is a nice day today !</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="coverButton2">
+           <property name="text">
+            <string>About LEGO, more than 400 billion Lego bricks have been produced since 1958. Can you believe it?</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="coverButton3">
+           <property name="text">
+            <string>Since we are playing with LEGO, did you know that LEGO is very very popular amongst adults population</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="coverButton4">
+           <property name="text">
+            <string>I love LEGO !</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="coverButton5">
+           <property name="text">
+            <string>Its going to be sunny tomorrow, I love it.</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="coverButton6">
+           <property name="text">
+            <string>I don't like rain, even though I don't go outside.</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QPushButton" name="trainIntro1">
+       <property name="text">
+        <string>Hello, nice to meet you. </string>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="0">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="16" column="1">
+      <widget class="QFrame" name="frame_2">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <widget class="QWidget" name="gridLayoutWidget">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>371</width>
+          <height>128</height>
+         </rect>
+        </property>
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="1" column="0">
+          <widget class="QPushButton" name="buttonPage10">
+           <property name="text">
+            <string>Page 10</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QPushButton" name="buttonPage18">
+           <property name="text">
+            <string>Page 18</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QPushButton" name="buttonPage14">
+           <property name="text">
+            <string>Page 14</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QPushButton" name="buttonPage3">
+           <property name="text">
+            <string>Page 3</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QPushButton" name="buttonPage6">
+           <property name="text">
+            <string>Page 6</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="text">
+        <string>Turn Off</string>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="1">
+      <spacer name="verticalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="7" column="1">
+      <widget class="QPushButton" name="responseButton1">
+       <property name="text">
+        <string>Menuel Response One</string>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="1">
+      <widget class="QPushButton" name="responseButton3">
+       <property name="text">
+        <string>Menuel Response Three</string>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="1">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
      <item row="3" column="1">
       <widget class="QLabel" name="label_2">
        <property name="text">
@@ -67,17 +267,10 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
+     <item row="7" column="0">
       <widget class="QPushButton" name="stimuActionOneButton">
        <property name="text">
         <string>Screen Training (Sound and Button)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QPushButton" name="stimuActionTwoButton">
-       <property name="text">
-        <string>Highfive Training</string>
        </property>
       </widget>
      </item>
@@ -88,13 +281,6 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="text">
-        <string>Turn Off</string>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -102,17 +288,251 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
+     <item row="17" column="0">
+      <spacer name="verticalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="9" column="1">
+      <widget class="QPushButton" name="responseButton2">
+       <property name="text">
+        <string>Menuel Response Two</string>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="1">
+      <widget class="QPushButton" name="responseButton4">
+       <property name="text">
+        <string>Menuel Response Four</string>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="0">
+      <widget class="QPushButton" name="stimuTwoFeedback">
+       <property name="text">
+        <string>Powerhand Training</string>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="0">
       <widget class="QPushButton" name="stimuOneFeedback">
        <property name="text">
         <string>Screen Training (Speech and Button)</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
-      <widget class="QPushButton" name="stimuTwoFeedback">
+     <item row="16" column="0">
+      <widget class="QFrame" name="frame">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>130</height>
+        </size>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <widget class="QRadioButton" name="playButton">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>30</y>
+          <width>111</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Of course !</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="playButton2">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>50</y>
+          <width>116</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Yes I can !</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="playButton4">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>90</y>
+          <width>116</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Don't worry. </string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="playButton3">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>70</y>
+          <width>116</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>No problem !</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_5">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>10</y>
+          <width>131</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Choose a phrase</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_6">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>50</y>
+          <width>31</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>or</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="radioButton_5">
+        <property name="geometry">
+         <rect>
+          <x>240</x>
+          <y>50</y>
+          <width>116</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>random</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="playButton5">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>110</y>
+          <width>116</width>
+          <height>22</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Nothing</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="playPushButton">
+        <property name="geometry">
+         <rect>
+          <x>220</x>
+          <y>90</y>
+          <width>98</width>
+          <height>27</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>No Problem !</string>
+        </property>
+       </widget>
+      </widget>
+     </item>
+     <item row="9" column="0">
+      <widget class="QPushButton" name="stimuActionTwoButton">
        <property name="text">
-        <string>Powerhand Training</string>
+        <string>Highfive Training</string>
+       </property>
+      </widget>
+     </item>
+     <item row="18" column="1">
+      <widget class="QFrame" name="frame_4">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>50</height>
+        </size>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <widget class="QTextEdit" name="textEdit">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>110</y>
+          <width>151</width>
+          <height>31</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="coverButton3_2">
+        <property name="geometry">
+         <rect>
+          <x>200</x>
+          <y>110</y>
+          <width>98</width>
+          <height>27</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>PlayText</string>
+        </property>
+       </widget>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QPushButton" name="trainIntro4">
+       <property name="text">
+        <string>Some of my interactions are like this:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QPushButton" name="trainIntro3">
+       <property name="text">
+        <string>I will help you sometimes, and sometimes I need your help and encouragement.  </string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QPushButton" name="trainIntro2">
+       <property name="text">
+        <string>Today we are going to work together to finish a task.</string>
+       </property>
+      </widget>
+     </item>
+     <item row="13" column="0">
+      <widget class="QPushButton" name="trainIntroAgain">
+       <property name="text">
+        <string>Would you like to try the actions again? </string>
        </property>
       </widget>
      </item>
